--- a/client/src/app/pay-bank-page/pay-bank-page.component.html
+++ b/client/src/app/pay-bank-page/pay-bank-page.component.html
@@ -38,6 +38,6 @@
         Получить файл для интернет-банка
       </button>
     </p>
-    <p><a class="link" href="#">Очистить форму</a></p>
+    <p><a class="link" href="javascript:location.reload()">Очистить форму</a></p>
   </div>
 </app-page-template>
