--- a/client/src/app/request-payment-page/request-payment-page.component.html
+++ b/client/src/app/request-payment-page/request-payment-page.component.html
@@ -55,6 +55,6 @@
         Создать платёж
       </button>
     </p>
-    <p><a class="link" href="#">Очистить форму</a></p>
+    <p><a class="link" href="javascript:location.reload()">Очистить форму</a></p>
   </div>
 </app-page-template>
